modules/cli/src/test/resources/bad/disamb/modules/Modules04e.scr
module bad.disamb.modules.Modules04e;

import bad.disamb.modules.pack1.Foo1 as Modules04e;

